# root-path

./: .cargoignore  .cc-check.toml  .cc-check.toml.example  .cursorrules  .gitignore  .markdownlint.json  .pre-commit-config.yaml  Cargo.toml  LICENSE  PUBLISHING.md  README.md  install.sh  package.json  pyproject.toml
.github/actions/download-binaries/: action.yml
.github/workflows/: ci.yml  publish.yml  release.yml
git-hooks/: commit-msg  pre-commit
scripts/: conventional_commit_check.sh  generate_python_package.py
src/: config.rs  lib.rs  main.rs  postinstall.rs  pre_commit_hook.rs
tests/: cli.rs  cli_basic.rs  cli_comments.rs  cli_commit_types.rs  cli_config.rs  cli_edge_cases.rs  cli_error_messages.rs  cli_flags.rs  cli_hooks.rs  cli_install.rs  cli_integration.rs  cli_output.rs  cli_stdin.rs  validator.rs
tests/common/: mod.rs
