[package]
name = "cc-check"
version = "0.1.0"
authors = ["Arvid Berndtsson <dev@arvid.tech>"]
edition = "2021"
description = "Cross-platform conventional commit checker for use in pre-commit/commit-msg hooks"
license = "MIT"
repository = "https://github.com/arvid-berndtsson/cc-check"
readme = "README.md"
keywords = ["conventional-commits", "git", "commit-msg", "pre-commit", "lint"]
categories = ["development-tools", "command-line-utilities"]

 [dependencies]
 regex = "1.10"
 clap = { version = "4.5", features = ["derive"] }
 anyhow = "1.0"
 thiserror = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"

 [profile.release]
 lto = true
 codegen-units = 1
opt-level = "z"
[[bin]]
name = "cc-check"
path = "src/main.rs"

[[bin]]
name = "pre-commit-hook"
path = "src/pre_commit_hook.rs"

[[bin]]
name = "postinstall"
path = "src/postinstall.rs"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.10"
serde = { version = "1.0", features = ["derive" ] }
serde_json = "1.0"

